# beeware-docs-tools

./: .gitignore  .pre-commit-config.yaml  .pyspelling.yml  .readthedocs.yaml  .rumdl.toml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.docs.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  translate.yml
docs/: config.yml  include_content.md  main.py  mkdocs.ar.yml  mkdocs.cs.yml  mkdocs.da.yml  mkdocs.de.yml  mkdocs.en.yml  mkdocs.es.yml  mkdocs.fa.yml  mkdocs.fr.yml  mkdocs.it.yml  mkdocs.ja.yml  mkdocs.ko.yml  mkdocs.pl.yml  mkdocs.pt.yml  mkdocs.ru.yml  mkdocs.ta.yml  mkdocs.tr.yml  mkdocs.vi.yml  mkdocs.zh_CN.yml  mkdocs.zh_TW.yml  spelling_wordlist
docs/en/: SUMMARY.md  index.md  shared_content
docs/en/_static/: custom.css
docs/en/about/: releases.md
docs/en/content_test_bed/: contribution_guide_base_include.md  index.md  style_guide_include.md
docs/en/content_test_bed/how-to/: code_contribution_base_include.md  feature_proposal_base_include.md  feature_request_base_include.md
docs/en/content_test_bed/how-to/contribute/: code_contribution_base_include.md  code_run_test.md  code_style_guide.md  contribution_process_base_include.md  dev_environment.md  docs_build.md  docs_contribute.md  docs_contribution_base_include.md  docs_process.md  docs_style_guide.md  feature_implement_process.md  feature_proposal.md  feature_proposal_process.md  first_time_contributors.md  git_feature_branch.md  index.md  issue_fix_process.md  issue_reproduce.md  issue_submit.md  issue_triage_process.md  pr_change_note.md  pr_review.md  pr_review_process_base_include.md  pr_review_provide_process.md  pr_submit.md  release_process.md  tools_use_process.md  translate.md  translate_process.md
docs/en/section_one/: index.md  page_two.md
docs/en/section_three/: index.md
docs/en/section_two/: index.md
docs/en/shared_content/: index.md  style_guide.md
docs/locales/ar/: translations.po
docs/locales/cs/: translations.po
docs/locales/da/: translations.po
docs/locales/de/: translations.po
docs/locales/de/LC_MESSAGES/: SUMMARY.po  index.po  style_guide.po
docs/locales/de/LC_MESSAGES/content_test_bed/: index.po  style_guide_include.po
docs/locales/de/LC_MESSAGES/section_one/: index.po  page_two.po
docs/locales/de/LC_MESSAGES/section_three/: index.po  page_05.po  page_07.po  page_08.po  page_09.po  page_10.po  page_11.po  page_12.po
docs/locales/de/LC_MESSAGES/section_two/: index.po
docs/locales/de/LC_MESSAGES/shared_content/: index.po  style_guide.po
docs/locales/es/: translations.po
docs/locales/fa/: translations.po
docs/locales/fr/: translations.po
docs/locales/fr/LC_MESSAGES/: SUMMARY.po  index.po
docs/locales/fr/LC_MESSAGES/content_test_bed/: index.po  style_guide_include.po
docs/locales/fr/LC_MESSAGES/section_one/: index.po  page_two.po
docs/locales/fr/LC_MESSAGES/section_three/: index.po  page_01.po  page_09.po  page_10.po
docs/locales/fr/LC_MESSAGES/section_two/: index.po
docs/locales/fr/LC_MESSAGES/shared_content/: style_guide.po
docs/locales/it/: translations.po
docs/locales/ja/: translations.po
docs/locales/ko/: translations.po
docs/locales/pl/: translations.po
docs/locales/pt/: translations.po
docs/locales/ru/: translations.po
docs/locales/ta/: translations.po
docs/locales/tr/: translations.po
docs/locales/vi/: translations.po
docs/locales/zh_CN/: translations.po
docs/locales/zh_TW/: translations.po
locales/de/LC_MESSAGES/: SUMMARY.po  index.po
locales/de/LC_MESSAGES/section_one/: page_two.po
locales/fr/LC_MESSAGES/: SUMMARY.po  index.po
locales/fr/LC_MESSAGES/section_one/: index.po  page_two.po
locales/fr/LC_MESSAGES/section_two/: index.po
rst-to-markdown-conversion/: README.md  pandoc-markdown-cleanup.py  translation_conversion.py
shared_content/: style_guide.md
src/beeware_docs_tools/: build_md_translations.py  build_po_translations.py  build_pot_translations.py  docs_test.py  live_serve_en.py  md_tempdir.py  update_machine_translations.py
src/beeware_docs_tools/overrides/: 404.html  blog-post.html  main.html
src/beeware_docs_tools/overrides/assets/javascripts/: copy_button.js
src/beeware_docs_tools/overrides/assets/stylesheets/: beeware_theme.css  main.css  palette.css
src/beeware_docs_tools/overrides/partials/: alternate.html  header.html  nav-item.html  nav.html  path-item.html  path.html  post.html  social.html  tabs.html  toc.html
src/beeware_docs_tools/overrides/partials/javascripts/: base.html
src/beeware_docs_tools/shared_content/en/: code_contribution_base.md  code_run_test.md  code_style_guide.md  contributing.md  contributing_index.md  contribution_process_base.md  contribution_topics_base.md  dev_environment.md  docs_build.md  docs_contribute.md  docs_contribution_base.md  docs_process.md  docs_style_guide.md  feature_implement_process.md  feature_proposal.md  feature_proposal_base.md  feature_proposal_process.md  feature_request_base.md  first_time_contributors.md  git_feature_branch.md  issue_fix_process.md  issue_reproduce.md  issue_submit.md  issue_triage_process.md  maintain_focus.md  pr_change_note.md  pr_review.md  pr_review_process.md  pr_review_provide_process.md  pr_submit.md  release_process.md  style_guide.md  tools_use_process.md  translate.md  translate_process.md
src/beeware_docs_tools/shared_content/en/contribute/: first-time-contributors.md  index.md
src/beeware_docs_tools/shared_content/en/how/: code_run_test.md  dev_environment.md  docs_build.md  docs_contribute.md  feature_proposal.md  issue_reproduce.md  issue_submit.md  pr_change_note.md  pr_review_provide.md  pr_submit.md  scope_creep.md  translate.md
src/beeware_docs_tools/shared_content/en/next/: pr_review.md  release_process.md
src/beeware_docs_tools/shared_content/en/style/: docs_style_guide.md
src/beeware_docs_tools/shared_content/en/what/: docs_process.md  feature_implement_process.md  feature_proposal_process.md  issue_fix_process.md  issue_triage_process.md  pr_review_process.md  (+3 more)
tests/: test_live_serve.py  test_machine_translation.py
(+103 files in other folders)
