[build-system]
requires = [
    "setuptools==80.9.0",
    "autocalver",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "beeware-docs-tools"
description = "Tools for building BeeWare's documentation with a common theme and translations."
readme = "README.md"
requires-python = ">= 3.12"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Kattni", email="kattni@kattni.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]

dependencies = [
    "click==8.2.1",  # DO NOT UPGRADE - 8.3.0 breaks MkDocs live serve
    "deepl==1.23.0",
    "markdown-checker==0.2.5",
    "mistletoe==1.5.0",
    "mkdocs-autorefs==1.4.3",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-macros-plugin==1.4.1",
    "mkdocs-material==9.6.23",
    "mkdocs==1.6.1",
    "mkdocstrings-python==1.18.2",
    "pymdown-extensions==10.16.1",
    "pyspelling==2.11",
    "python-Levenshtein==0.27.3",
    "PyYAML==6.0.3",
    "polib==1.2.0",
    "ruff==0.14.3",
    "translate-toolkit==3.16.3",
]

[dependency-groups]
# Extras used by developers *of* beeware-docs-tools are pinned to specific versions to
# ensure environment consistency.
dev = [
    "pre-commit == 4.3.0",
    "tox-uv == 1.29.0",
]

[project.urls]
Homepage = "https://beeware.org/"
Funding = "https://beeware.org/contributing/membership/"
Tracker = "https://github.com/beeware/beeware-docs-tools/issues/"
Source = "https://github.com/beeware/beeware-docs-tools/"

[project.scripts]
build_md_translations = "beeware_docs_tools.build_md_translations:main"
build_po_translations = "beeware_docs_tools.build_po_translations:main"
build_pot_translations = "beeware_docs_tools.build_pot_translations:main"
live_serve_en = "beeware_docs_tools.live_serve_en:main"
update_machine_translations = "beeware_docs_tools.update_machine_translations:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beeware_docs_tools = [
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.png",
    "**/*.woff2",
    "**/*.po",
    "**/*.md",
]

[tool.autocalver]
use = true
log = "git-log-head"
log_command = "git log -n 1 --date=iso"
is_main_var = "BUILD_BRANCH_REF"
is_main_match = ".*/main$"
