[build-system]
requires = [
    "setuptools==82.0.1",
    "autocalver",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "beeware-docs-tools"
description = "Tools for building BeeWare's documentation with a common theme and translations."
readme = "README.md"
requires-python = ">= 3.12"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Kattni", email="kattni@kattni.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]

dependencies = [
    "click==8.3.2",
    "deepl==1.30.0",
    "markdown-checker==0.2.5",
    "mistletoe==1.5.1",
    "mkdocs-autorefs==1.4.4",
    "mkdocs-literate-nav==0.6.3",
    "mkdocs-macros-plugin==1.5.0",
    "mkdocs-material==9.7.6",
    "mkdocs-rss-plugin==1.18.1",
    "mkdocs==1.6.1",  # DO NOT UPGRADE - 2+ is not compatible with anything here
    "mkdocstrings-python==2.0.3",
    "pymdown-extensions==10.21.2",
    "pyspelling==2.12.1",
    "python-Levenshtein==0.27.3",
    "PyYAML==6.0.3",
    "polib==1.2.0",
    "ruff==0.15.10",
    "setuptools_scm==10.0.5",
    "translate-toolkit==3.19.4",
]

[dependency-groups]
# Extras used by developers *of* beeware-docs-tools are pinned to specific versions to
# ensure environment consistency.
pre-commit = [
    "pre-commit == 4.5.1",
]

tox-uv = [
    "tox-uv == 1.35.1",
]

wlc = [
    "wlc == 1.17.2",
]

dev = [
    {include-group = "pre-commit"},
    {include-group = "tox-uv"},
]

test = [
    "pytest == 9.0.3",
    "pytest-xdist == 3.8.0",
]

translate = [
    {include-group = "tox-uv"},
    {include-group = "wlc"},
]

[project.urls]
Homepage = "https://beeware.org/"
Funding = "https://beeware.org/contributing/membership/"
Tracker = "https://github.com/beeware/beeware-docs-tools/issues/"
Source = "https://github.com/beeware/beeware-docs-tools/"

[project.scripts]
build_md_translations = "beeware_docs_tools.build_md_translations:main"
build_po_translations = "beeware_docs_tools.build_po_translations:main"
build_pot_translations = "beeware_docs_tools.build_pot_translations:main"
live_serve_en = "beeware_docs_tools.live_serve_en:main"
update_machine_translations = "beeware_docs_tools.update_machine_translations:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.rumdl]
flavor = "mkdocs"
include = ["**/*.md"]
exclude = ["docs/en/SUMMARY.md", "comment.md", "CODE_OF_CONDUCT.md"]
respect-gitignore = true

# Disable rules:
# MD014: Force commands in codeblocks to show output
disable = ["MD014"]

[tool.rumdl.per-file-ignores]
# MD002: First heading should be level 1, found level 2; title will be included in the target page
# MD034: URL without angle brackets or link formatting; triggers on URLs with Jinja variable included
# MD041: First line in file should be level 1 heading; title will be included in the target page
"src/beeware_docs_tools/shared_content/en/*.md" = ["MD002", "MD034", "MD041",]

[tool.rumdl.MD013]  # Line length
line_length = 999999  # Force reflow to paragraph content to remove linebreaks
reflow = true
reflow_mode = "normalize"

[tool.rumdl.MD026]  # Remove punctuation at the end of headings
punctuation = ",;:"

[tool.rumdl.MD033]  # No inline HTML
allowed_elements = ["nospell",]  # pyspelling inline disable tag

[tool.rumdl.MD061]
terms = ["TODO"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beeware_docs_tools = [
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.png",
    "**/*.woff2",
    "**/*.po",
    "**/*.md",
]

[tool.autocalver]
use = true
log = "git-log-head"
log_command = "git log -n 1 --date=iso"
is_main_var = "BUILD_BRANCH_REF"
is_main_match = ".*/main$"
